# fpimpl

./: .clang-format  CMakeLists.txt  FPImplConfig.cmake  LICENSE  flake.nix
headers/fpimpl/: fpimpl.h
